[package]
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
description = "Webhooks catcher written in Rust"
license = "GPL-3.0"
name = "fisher"
readme = "README.md"
repository = "https://github.com/pietroalbini/fisher"
version = "1.0.0"

[[bin]]
doc = false
name = "fisher"

[dependencies]
ansi_term = "0.12.0"
error-chain = "0.12.0"
lazy_static = "1.2.0"
nix = { version = "0.29.0", features = ["process", "signal"] }
rand = "0.8.0"
regex = "1.1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
tempdir = "^0.3"
tiny_http = "0.12.0"
toml = "^0.8"
url = "^2.5"
users = "0.11.0"
hmac = "0.12.0"
sha-1 = "0.10.0"

[dev-dependencies]
hyper = "0.10"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
lto = true
